--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -562,7 +562,7 @@ radosgw_address: public int
 #docker_exec_cmd:
 #docker: false
 ceph_docker_image: "ceph/daemon"
-ceph_docker_image_tag: latest
+ceph_docker_image_tag: latest-mimic
 ceph_docker_registry: docker.io
 ## Client only docker image - defaults to {{ ceph_docker_image }}
 #ceph_client_docker_image: "{{ ceph_docker_image }}"
@@ -570,7 +570,7 @@ ceph_docker_registry: docker.io
 #ceph_client_docker_registry: "{{ ceph_docker_registry }}"
 #ceph_docker_enable_centos_extra_repo: false
 ceph_docker_on_openstack: false
-#containerized_deployment: False
+containerized_deployment: False
 
 ############
 # KV store #
